Add ability to open indexes in an iframe